--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://i.ibb.co/qFLHj2qM/ingx8.jpg') no-repeat center center;
+            background: url('https://i.postimg.cc/9XGtny3q/IMG-20250221-222251-004.jpg') no-repeat center center;
             background-size: cover;
             z-index: 1;
         }
@@ -65,7 +65,7 @@
         <video id="video" preload="auto"></video>
     </div>
 
-    <button id="telegramButton" onclick="window.open('https://t.me/kmricricker', '_blank')">Join Telegram</button>
+    <button id="telegramButton" onclick="window.open('https://t.me/+y2t5X8MOn_hlMWI1', '_blank')">Join Telegram</button>
 
     <script>
         // Increment counter for user interactions
@@ -113,7 +113,6 @@
                 video.addEventListener('play', function() {
                     document.getElementById('loadingImage').style.display = 'none';
                 });
-
 try {
                     await player.load(manifestUri);
                     console.log('Video loaded successfully');
