--- a/shaka.html
+++ b/shaka.html
@@ -65,7 +65,7 @@
         <video id="video" preload="auto"></video>
     </div>
 
-    <button id="telegramButton" onclick="window.open('https://t.me/+y2t5X8MOn_hlMWI1', '_blank')">Join Telegram</button>
+    <button id="telegramButton" onclick="window.open('https://t.me/+QRdNAmX47sNkNWFl', '_blank')">Join Telegram</button>
 
     <script>
         // Increment counter for user interactions
@@ -113,6 +113,7 @@
                 video.addEventListener('play', function() {
                     document.getElementById('loadingImage').style.display = 'none';
                 });
+                
 try {
                     await player.load(manifestUri);
                     console.log('Video loaded successfully');
