--- a/index.html
+++ b/index.html
@@ -10,23 +10,58 @@
         body {
             background-color: black;
             color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
-        #video-container {
+         #video-container {
             position: relative;
+            width: 80%;
             max-width: 800px;
-            margin: auto;
+            background-color: black;
         }
         video {
             width: 100%;
+            height: auto;
         }
+        .telegram-link-container {
+            margin-top: 20px;
+        }
+        .telegram-button {
+            background-color: #0088cc;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .telegram-button:hover {
+            background-color: #006799;
+        }
+         #loadingImage {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://t.me/+QRdNAmX47sNkNWFl') no-repeat center center;
+            background-size: cover;
+            z-index: 1;
     </style>
 </head>
 <body>
-    <h1>Shaka Player Streaming Video</h1>
+    <h1>PSL LIVE 2025</h1>
     <div id="video-container">
         <video id="video" controls autoplay></video>
+    </div>
+
+    <!-- Telegram Button -->
+    <div class="telegram-link-container">
+        <a href="https://t.me/kmricricker" class="telegram-button" target="_blank">Join Telegram</a>
     </div>
 
     <script>
@@ -50,7 +85,14 @@
             }
         }
 
-        document.addEventListener("DOMContentLoaded", initPlayer);
+        document.addEventListener("DOMContentLoaded", function() {
+            initPlayer();
+
+            // Show the Telegram confirmation dialog on page load
+            if (confirm("Join Our Telegram Channel For Latest Update?")) {
+                window.open("https://t.me/kmricricker", '_blank');
+            }
+        });
     </script>
 </body>
 </html>
